# atomate2

./: README.org  a2.conda-lock.yml  a2.yaml  a2a.py  pyproject.toml
