[tool.poetry]
name = "atomate2"
version = "0.0.8"
description = "atomate2 is a library of materials science workflows"
authors = [{ name = "Alex Ganose", email = "alexganose@gmail.com" }]
license = { text = "modified BSD" }
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.8"
pymatgen = "^2022.8.23"
custodian = ">=2022.5.26"
pydantic = "^1.10.2"
monty = "^2022.9.9"
jobflow = ">=0.1.5"
numpy = "^1.23.4"
click = "^8.1.3"
fireworks = { version = "^2.0.3", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"

[tool.poetry.extras]
fireworks = ["fireworks"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"