[tool.poetry]
name = "atomate2"
version = "0.0.8"
description = "atomate2 is a library of materials science workflows"
authors = [{ name = "Alex Ganose", email = "alexganose@gmail.com" }]
license = { text = "modified BSD" }
readme = "README.org"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
pymatgen = "^2022.8.23"
custodian = ">=2022.5.26"
pydantic = "^1.10.2"
monty = "^2022.9.9"
jobflow = ">=0.1.5"
numpy = "^1.23.4"
click = "^8.1.3"
fireworks = { version = "^2.0.3", optional = true }

# phonopy = { version = "^1.10.8", optional = true }
# seekpath = { version = "TODO", optional = true }

# mp-api = { version = "^0.27.5", optional = true }

# amset = { version = "^0.4.15", optional = true }
# pydash = { version = "TODO", optional = true }
# cclib = { version = "TODO", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
# pre-commit = ">=2.12.1"

# [tool.poetry.group.doc.dependencies]
# numpydoc = "1.5.0",
# ipython = "8.6.0",
# FireWorks = "2.0.3",
# autodoc_pydantic = "1.8.0",
# jupyter-book = "0.13.1",

[tool.poetry.extras]
fireworks = ["fireworks"]
# phonons = ["phonopy", "seekpath"]
# mp = ["mp-api"]
# amset = ["amset", "pydash"]
# cclib = ["cclib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
atm = "atomate2.cli:cli"

[tool.poetry.urls]
homepage = "https://materialsproject.github.io/atomate2/"
repository = "https://github.com/hackingmaterials/atomate2"
documentation = "https://materialsproject.github.io/atomate2/"
changelog = "https://github.com/hackingmaterials/atomate2/blob/main/CHANGELOG.md"

# [tool.setuptools.package-data]
# atomate2 = ["py.typed"]
# "atomate2.vasp.sets" = ["*.yaml"]
# "atomate2.vasp.schemas.calc_types" = ["*.yaml"]

# [tool.flake8]
# max-line-length = 88
# max-doc-length = 88
# select = "C, E, F, W, B, B950"
# extend-ignore = "E203, W503, E501, F401, RST21"
# min-python-version = "3.8.0"
# docstring-convention = "numpy"
# rst-roles = "class, func, ref, obj"
# 
# [tool.mypy]
# ignore_missing_imports = true
# no_strict_optional = true
# 
# [tool.pytest.ini_options]
# filterwarnings = [
#     "ignore:.*POTCAR.*:UserWarning",
#     "ignore:.*magmom.*:UserWarning",
#     "ignore:.*is not gzipped.*:UserWarning",
#     "ignore:.*input structure.*:UserWarning",
#     "ignore::DeprecationWarning",
# ]
# 
# [tool.coverage.run]
# include = ["src/*"]
# parallel = true
# branch = true
# 
# [tool.coverage.paths]
# source = ["src/"]
# 
# [tool.coverage.report]
# skip_covered = true
# show_missing = true
# exclude_lines = [
#     '^\s*assert False(,|$)',
#     'if typing.TYPE_CHECKING:',
#     '^\s*@overload( |$)',
# ]
# 